--- a/package.json
+++ b/package.json
@@ -8,8 +8,45 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ceramicnetwork/3id-did-resolver": "^1.4.3",
+    "@ceramicnetwork/http-client": "^1.3.0",
+    "@ceramicnetwork/stream-tile": "^1.3.1",
+    "@luxdamore/vue-css-doodle": "^1.0.1",
+    "apexcharts": "^3.28.3",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
+    "bignumber.js": "^9.0.1",
+    "chart.js": "^3.5.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "cross-fetch": "^3.1.4",
+    "dids": "^2.4.0",
+    "dotenv": "^10.0.0",
+    "ether-converter": "^0.0.16",
+    "graphql": "^15.6.0",
+    "graphql-tag": "^2.12.5",
+    "html2canvas": "^1.3.2",
+    "key-did-provider-ed25519": "^1.1.0",
+    "key-did-resolver": "^1.4.0",
+    "leaflet": "^1.7.1",
+    "moment": "^2.29.1",
+    "node-random-name": "^1.0.1",
+    "protobufjs": "^6.11.2",
+    "skynet-js": "^3.0.2",
+    "sweetalert2": "^11.1.7",
+    "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.2",
+    "vue-chartjs": "^3.5.1",
+    "vue-grid-layout": "^2.3.12",
+    "vue-router": "^3.0.1",
+    "vue2-leaflet": "^2.7.1",
+    "vuetify": "^2.4.1",
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4",
+    "web3": "^1.5.3",
+    "web3-eth": "^1.5.2",
+    "web3-eth-accounts": "^1.5.3",
+    "web3-utils": "^1.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -18,7 +55,13 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-route": "~0.0.7",
+    "vue-cli-plugin-store": "~0.0.7",
+    "vue-cli-plugin-vuetify": "~2.4.2",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
