--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "heroku",
   "version": "1.0.0",
   "description": "",
   "engines": {
@@ -24,6 +24,20 @@
     "graphql-tag": "^2.12.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.13",
-    "restana": "^4.9.1"
-  }
+    "restana": "^4.9.1",
+    "ejs": "^3.1.5"
+  },
+  "devDependencies": {
+    "got": "^11.3.0",
+    "tape": "^4.7.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/heroku/node-js-getting-started"
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ]
 }
