--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
+    "axios": "^0.21.4",
     "bignumber.js": "^9.0.1",
     "chart.js": "^3.5.1",
     "core-js": "^3.6.5",
