--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bignumber.js": "^9.0.1",
     "chart.js": "^3.5.1",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "cross-fetch": "^3.1.4",
     "dids": "^2.4.0",
     "dotenv": "^10.0.0",
@@ -32,8 +33,10 @@
     "leaflet": "^1.7.1",
     "local-cors-proxy": "^1.1.0",
     "moment": "^2.29.1",
+    "morgan": "^1.10.0",
     "node-random-name": "^1.0.1",
     "protobufjs": "^6.11.2",
+    "restana": "^4.9.1",
     "skynet-js": "^4.0.17-beta",
     "sweetalert2": "^11.1.7",
     "vue": "^2.6.11",
