--- a/contracts/package.json
+++ b/contracts/package.json
@@ -9,7 +9,8 @@
     "gendocs": "npx solidity-docgen --solc-module solc-0.8.4",
     "iotex": "embark reset && embark build iotex",
     "ropsten": "embark reset && embark build ropsten",
-    "harmony": "embark reset && embark build harmony"
+    "harmony": "embark reset && embark build harmony",
+    "iotex-deploy":"truffle deploy --reset --network iotex"
   },
   "keywords": [],
   "author": "",
