--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ceramicnetwork/http-client": "^1.3.0",
     "@ceramicnetwork/stream-tile": "^1.3.1",
     "@luxdamore/vue-css-doodle": "^1.0.1",
+    "@reef-defi/evm-provider": "^1.0.4",
     "apexcharts": "^3.28.3",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
