--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ceramicnetwork/http-client": "^1.3.0",
     "@ceramicnetwork/stream-tile": "^1.3.1",
     "@luxdamore/vue-css-doodle": "^1.0.1",
+    "@metamask/detect-provider": "^1.2.0",
     "apexcharts": "^3.28.3",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
@@ -28,6 +29,7 @@
     "graphql": "^15.6.0",
     "graphql-tag": "^2.12.5",
     "html2canvas": "^1.3.2",
+    "http-server": "^14.1.0",
     "key-did-provider-ed25519": "^1.1.0",
     "key-did-resolver": "^1.4.0",
     "leaflet": "^1.7.1",
