--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ceramicnetwork/stream-tile": "^1.3.1",
     "@luxdamore/vue-css-doodle": "^1.0.1",
     "@metamask/detect-provider": "^1.2.0",
+    "@textile/hub": "^6.3.4",
     "apexcharts": "^3.28.3",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
